--- a/Shopping_Buy_All/Shopping_Buy_All/Properties/Resources.resx
+++ b/Shopping_Buy_All/Shopping_Buy_All/Properties/Resources.resx
@@ -118,10 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="pop-shop" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pop-shop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="montanas-minimalista-arte-low-poly_2560x1440_xtrafondos.com" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\montanas-minimalista-arte-low-poly_2560x1440_xtrafondos.com.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="pop-shop" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pop-shop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Trash" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Trash.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
