--- a/Shopping_Buy_All/Shopping_Buy_All/Properties/Resources.resx
+++ b/Shopping_Buy_All/Shopping_Buy_All/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="Trash" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Trash.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="menu-editor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\menu-editor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
