Búsqueda manual Cliente

--- a/Shopping_Buy_All/Shopping_Buy_All/ABMS/ABM Cliente/Client_Modify.resx
+++ b/Shopping_Buy_All/Shopping_Buy_All/ABMS/ABM Cliente/Client_Modify.resx
@@ -153,6 +153,9 @@
   <metadata name="EstadoCiv.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="TipoEstadoCivil.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="Sex.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
